--- a/TDDT/build.gradle
+++ b/TDDT/build.gradle
@@ -2,6 +2,8 @@ group 'de.hhu.propra.TDDT'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'application'
+mainClassName = "Main"
 
 sourceCompatibility = 1.8
 
