--- a/TDDT/build.gradle
+++ b/TDDT/build.gradle
@@ -15,4 +15,7 @@ dependencies {
     compile group: 'de.hhu.stups', name: 'virtual-kata-lib', version: '1.0.1'
     compile group: 'org.jdom', name: 'jdom2', version: '2.0.6'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile "org.testfx:testfx-core:4.0.4-alpha"
+    testCompile "org.testfx:testfx-junit:4.0.4-alpha"
+    testCompile "org.testfx:testfx-legacy:4.0.4-alpha"
 }
