--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ jdk: oraclejdk8
 script:
   - cd TDDT
   - ./gradlew check
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
